--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
-    "cordova-android": "^8.0.0",
+    "cordova-android": "7.1.4",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "text-encoding": "^0.7.0",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
